--- a/bluestyle.css
+++ b/bluestyle.css
@@ -1,8 +1,8 @@
 body {
-background-color: lightblue;
+background-color: gray;
 }
 
 h1 {
-color: navy;
-margin-left: 200px;
+color: black;
+margin-left: 20px;
 }
