--- a/bluestyle.css
+++ b/bluestyle.css
@@ -1,8 +1,13 @@
 body {
-background-color: gray;
+background-color: lightblue;
 }
 
 h1 {
-color: black;
+color: navy;
+margin-left: 20px;
+}
+
+h1 {
+color: navy;
 margin-left: 20px;
 }
